asistencia-primer-avance

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
     <application
         android:label="AppESC"
         android:icon="@mipmap/ic_launcher"
+        android:enableOnBackInvokedCallback="true"
     >
         <activity
             android:name=".MainActivity"
