--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   hive_flutter: ^1.1.0
   provider: ^6.1.2
   async: ^2.11.0
+  intl: ^0.19.0
+  uuid: ^4.4.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
