--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   async: ^2.11.0
   intl: ^0.19.0
   uuid: ^4.4.0
+  share_plus: ^9.0.0
+  printing: ^5.12.0
+  pdf: ^3.10.8
 dev_dependencies:
   flutter_test:
     sdk: flutter
